# fido-rs

./: .gitmodules  Cargo.toml  README.MD
.github/workflows/: CI.yml
fido2-rs/: Cargo.toml
fido2-rs/examples/: credman.rs  device_list.rs  largeblob.rs
fido2-rs/src/: assertion.rs  credentials.rs  credman.rs  device.rs  error.rs  lib.rs
libfido2-sys/: Cargo.toml  build.rs  fido2_wrapper.h
libfido2-sys/src/: ffi.rs  lib.rs
