[package]
name = "fido2-rs"
version = "0.2.0"
authors = ["tyan boot <tyanboot@outlook.com>"]
license = "MIT"
description = "Rust bindings to Yubico fido2"
repository = "https://github.com/tyan-boot/fido-rs"
keywords = ["fido2", "webauthn"]
categories = ["authentication", "api-bindings", "hardware-support"]
edition = "2021"

[dependencies]
thiserror = "1.0.65"
bitflags = "2.6.0"
libfido2-sys = { version = "0.3.0", path = "../libfido2-sys" }
openssl = "0.10.68"
foreign-types = "=0.3.1"
zeroize = "1.8.1"

[dev-dependencies]
anyhow = "1.0.91"
