[package]
name = "fido2-rs"
version = "0.4.0"
authors = ["tyan boot <tyanboot@outlook.com>"]
license = "MIT"
description = "Rust bindings to Yubico fido2"
repository = "https://github.com/tyan-boot/fido-rs"
keywords = ["fido2", "webauthn"]
categories = ["authentication", "api-bindings", "hardware-support"]
edition = "2024"

[dependencies]
thiserror = "2"
bitflags = "2.10"
libfido2-sys = { version = "0.5.0", path = "../libfido2-sys" }
openssl = "0.10.75"
foreign-types = "=0.3.1"
zeroize = { version = "1.8.2", features = ["std"] }

[dev-dependencies]
anyhow = "1.0.100"

[features]
default = []
vendored = ["libfido2-sys/vendored"]
nfc = ["libfido2-sys/nfc"]
pcsc = ["libfido2-sys/pcsc"]
hidapi = ["libfido2-sys/hidapi"]
win-hello = ["libfido2-sys/win-hello"]
