[package]
name = "libfido2-sys"
version = "0.5.0"
authors = ["tyan boot <tyanboot@outlook.com>"]
license = "MIT"
description = "FFI bindings to Yubico fido2"
repository = "https://github.com/tyan-boot/fido-rs"
keywords = ["fido2", "webauthn"]
categories = ["external-ffi-bindings"]
edition = "2024"
links = "fido2"

build = "build.rs"

exclude = [
    "libfido2/.git/",
    "libfido2/.gitignore",
    "libfido2/.gitattributes",
    "libfido2/.github/",
    "libfido2/.actions/",
    "libfido2/fuzz/",
    "libfido2/regress/",
    "libfido2/examples/",
    "libfido2/tools/",
    "libfido2/man/",
    "libfido2/NEWS",
    "libfido2/SECURITY.md",
    "libfido2/windows/",
    "libfido2/udev/",
]

[dependencies]
libz-sys = { version = "1.1", default-features = false }
openssl-sys = { version = "0.9", default-features = false }

[build-dependencies]
anyhow = "1.0.100"
cfg-if = "1.0.4"
cmake = { version = "0.1.54", optional = true }
bindgen = { version = "0.72" }
regex = { version = "1", features = ["unicode-case"] }  # enable case-insensitive matching support

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.15"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = "0.3.32"

[features]
default = []
vendored = ["cmake"]
nfc = []
pcsc = []
hidapi = []
win-hello = []
